--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="#">ST.Anger</a>
         <a href="#">></a>
-        <a href="#">RIP</a>
+        <a href="#">Rust In Peace</a>
     </nav>
 
     <section>
