--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Cristobal Martinez">
     <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +19,9 @@
         <a href="#">></a>
         <a href="#">Rust In Peace</a>
     </nav>
-
+    <span class="material-symbols-outlined">
+home
+</span>
     <section>
         <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptatibus voluptatem magni sequi tenetur eligendi consequatur distinctio quas totam non, ratione numquam voluptates veritatis veniam fugit, dignissimos aliquam itaque quos.</p>
