--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Cristobal Martinez">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
     <link rel="stylesheet" href="CSS/estilo.css">
     <title>Document</title>
@@ -30,7 +33,7 @@ home
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, sapiente expedita, illum officia voluptatem ducimus saepe impedit ut accusamus modi natus ex qui voluptatibus animi quod velit iusto possimus amet?</p>            
         </div>
     </section>
-
+    <h1>JANET</h1>
     <picture class="foto">
         <img src="IMG/anger.jpg" alt="ORO SOLIDO" width="300" height="300">
     </picture>
