--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
     <link rel="stylesheet" href="CSS/estilo.css">
     <title>Document</title>
@@ -34,6 +35,7 @@ home
         </div>
     </section>
     <h1>JANET</h1>
+    <h2>Melodie</h2>
     <picture class="foto">
         <img src="IMG/anger.jpg" alt="ORO SOLIDO" width="300" height="300">
     </picture>
